fixed the scrollbar issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
-/* * {
+* {
   outline: solid;
   outline-color: blue;
-} */
+}
 
 * {
     box-sizing: border-box;
@@ -9,11 +9,20 @@
 
 #root {
   display: flex;
-  width: 100vw;
+  width: 100%;
+  min-height: 100vh;
   text-align: center;
   justify-items: center;
   justify-content: center;
-  padding: 0px;
-  margin: 0px;
+  align-items: center;
+}
+
+html {
+  scrollbar-gutter: stable;
+}
+
+main {
+  width: 100%;
+  justify-items: center;
 }
 
