--- a/src/styles/ExerciseSession.css
+++ b/src/styles/ExerciseSession.css
@@ -6,7 +6,8 @@
     flex-direction: column;
     max-width: 400px;
     min-height: 90vh;
-    width: 90vw;
+    width: 90%;
+    justify-self: center;
 }
 
 input {
@@ -31,7 +32,7 @@ input {
     position: fixed;
     z-index: 2;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     align-content: center;
     justify-items: center;
 }
